replaced giant gifs, fixed layout issues

--- a/css/something.css
+++ b/css/something.css
@@ -30,7 +30,7 @@ figcaption{
 }
 
 .container {
-  margin-top: 80px;
+  margin-top: 15px;
 }
 .center {
   text-align: center;
@@ -158,9 +158,9 @@ figcaption{
   padding-bottom: 10px;
 }
 
-.top-bar-section .dropdown li{
+/* .top-bar-section .dropdown li{
   height: 40px;
-}
+} */
 
 .top-bar-section li:not(.dropdown) li:not(.has-form) a:not(.button),
 .top-bar-section li.active:not(.dropdown) li.active:not(.has-form) a:not(.button),
@@ -314,7 +314,7 @@ a[href^="A.M.html"] > .featured-image {
 
 .project-container {
 	background: #FFF;
-	margin: 0 20px 40px 20px;
+	margin-bottom: 60px;
 	padding: 20px;
 }
 
@@ -499,7 +499,7 @@ a.bm-active  {
 .bm-menu p {
   text-align: center;
   font-family: 'Lato', sans-serif;
-  font-weight: 100;
+  font-weight: 300;
   padding: 0;
   margin: 0 0 40px 0;
 }
@@ -567,6 +567,13 @@ a.bm-active  {
 /***********************************************************
  media queries
  ***********************************************************/
+
+@media screen and (min-width: 641px) and (max-width: 840px) {
+  iframe.instagram-media {
+    max-width: 480px !important;
+    min-width: 310px !important;
+  }
+}
 
 @media screen and (min-width: 481px) and (max-width: 640px) {
   .container {
